# discord-reels-reposter

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  bot.py  config.py  docker-compose.yml  pyproject.toml
cogs/: video_handler.py
utils/: __init__.py  compressor.py  downloader.py  validators.py
